WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116015
[Win] REGRESSION(
r149944
): mmap is not available on Windows
https://bugs.webkit.org/show_bug.cgi?id=116015
Summary
[Win] REGRESSION(r149944): mmap is not available on Windows
Zoltan Arvai
Reported
2013-05-13 01:08:45 PDT
After
r149944
Qt Win build is failing: C:\buildslave\qt-windows-32bit-release\build\Source\WebKit2\Platform\CoreIPC\ArgumentEncoder.cpp(51) : error C3861: 'munmap': identifier not found C:\buildslave\qt-windows-32bit-release\build\Source\WebKit2\Platform\CoreIPC\ArgumentEncoder.cpp(75) : error C2065: 'PROT_READ' : undeclared identifier C:\buildslave\qt-windows-32bit-release\build\Source\WebKit2\Platform\CoreIPC\ArgumentEncoder.cpp(75) : error C2065: 'PROT_WRITE' : undeclared identifier C:\buildslave\qt-windows-32bit-release\build\Source\WebKit2\Platform\CoreIPC\ArgumentEncoder.cpp(75) : error C2065: 'MAP_ANON' : undeclared identifier C:\buildslave\qt-windows-32bit-release\build\Source\WebKit2\Platform\CoreIPC\ArgumentEncoder.cpp(75) : error C2065: 'MAP_PRIVATE' : undeclared identifier C:\buildslave\qt-windows-32bit-release\build\Source\WebKit2\Platform\CoreIPC\ArgumentEncoder.cpp(75) : error C3861: 'mmap': identifier not found C:\buildslave\qt-windows-32bit-release\build\Source\WebKit2\Platform\CoreIPC\ArgumentEncoder.cpp(82) : error C3861: 'munmap': identifier not found And after
r149945
: C:\buildslave\qt-windows-32bit-release\build\Source\WebKit2\Platform\CoreIPC\ArgumentEncoder.cpp(32) : fatal error C1083: Cannot open include file: 'sys/mman.h': No such file or directory Can you check it, please?
Attachments
Patch
(2.68 KB, patch)
2013-05-13 08:57 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Patch
(2.68 KB, patch)
2013-05-13 09:20 PDT
,
Jocelyn Turcotte
andersca
: review-
andersca
: commit-queue-
Details
Formatted Diff
Diff
Patch
(2.78 KB, patch)
2013-05-13 11:42 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Patch
(2.78 KB, patch)
2013-05-13 11:50 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2013-05-13 01:16:52 PDT
(In reply to
comment #0
)
> After
r149944
Qt Win build is failing: > Can you check it, please?
Zoltán, Apple isn't responsible to fix any Qt-WK2 related build breakages. So it would be great if you can check and fix it yourself instead of asking others to do it. ;-)
Zoltan Arvai
Comment 2
2013-05-13 06:21:31 PDT
I found similar things in WTF/wtf/TCSystemAlloc.cpp where #if guards are used for MMAP and VIRTUALALLOC capable ports.
Jocelyn Turcotte
Comment 3
2013-05-13 08:57:33 PDT
Created
attachment 201572
[details]
Patch
WebKit Commit Bot
Comment 4
2013-05-13 09:00:29 PDT
Attachment 201572
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/Platform/CoreIPC/ArgumentEncoder.cpp']" exit_code: 1 Source/WebKit2/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jocelyn Turcotte
Comment 5
2013-05-13 09:20:34 PDT
Created
attachment 201575
[details]
Patch Fix the style.
Anders Carlsson
Comment 6
2013-05-13 10:12:05 PDT
Comment on
attachment 201575
[details]
Patch There’s no reason to call VirtualAlloc/VirtualFree on Windows; you can keep calling malloc/free.
Jocelyn Turcotte
Comment 7
2013-05-13 11:42:20 PDT
Created
attachment 201586
[details]
Patch Use fastAlloc instead of VirtualAlloc and use mmap only on OS(DARWIN).
Jocelyn Turcotte
Comment 8
2013-05-13 11:50:35 PDT
Created
attachment 201587
[details]
Patch Reword the ChangeLog.
WebKit Commit Bot
Comment 9
2013-05-14 10:55:12 PDT
Comment on
attachment 201587
[details]
Patch Clearing flags on attachment: 201587 Committed
r150079
: <
http://trac.webkit.org/changeset/150079
>
WebKit Commit Bot
Comment 10
2013-05-14 10:55:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug