[Win] REGRESSION(r149944): mmap is not available on Windows https://bugs.webkit.org/show_bug.cgi?id=116015

Reviewed by Anders Carlsson.

Use fastAlloc/fastFree for platforms other than OS(DARWIN) where
using mmap is not necessary and maybe not available.

* Platform/CoreIPC/ArgumentEncoder.cpp:
(CoreIPC::allocBuffer):
(CoreIPC::freeBuffer):
(CoreIPC::ArgumentEncoder::~ArgumentEncoder):
(CoreIPC::ArgumentEncoder::grow):


Canonical link: https://commits.webkit.org/134512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150079 268f45cc-cd09-0410-ab3c-d52691b4dbfc