Source/WebKit2/Platform/CoreIPC/ArgumentEncoder.cpp
@@ -29,9 +29,31 @@
 #include "DataReference.h"
 #include <algorithm>
 #include <stdio.h>
+
+#if OS(DARWIN)
 #include <sys/mman.h>
+#endif
 
 namespace CoreIPC {
+
+static inline void* allocBuffer(size_t size)
+{
+#if OS(DARWIN)
+    return mmap(0, size, PROT_READ | PROT_WRITE, MAP_ANON | MAP_PRIVATE, -1, 0);
+#else
+    return fastMalloc(size);
+#endif
+}
+
+static inline void freeBuffer(void* addr, size_t size)
+{
+#if OS(DARWIN)
+    munmap(addr, size);
+#else
+    UNUSED_PARAM(size);
+    fastFree(addr);
+#endif
+}
 
 PassOwnPtr<ArgumentEncoder> ArgumentEncoder::create()
 {
@@ -49,7 +71,7 @@ ArgumentEncoder::ArgumentEncoder()
 ArgumentEncoder::~ArgumentEncoder()
 {
     if (m_buffer != m_inlineBuffer)
-        munmap(m_buffer, m_bufferCapacity);
+        freeBuffer(m_buffer, m_bufferCapacity);
 
 #if !USE(UNIX_DOMAIN_SOCKETS)
     // FIXME: We need to dispose of the attachments in cases of failure.
@@ -73,14 +95,14 @@ uint8_t* ArgumentEncoder::grow(unsigned alignment, size_t size)
         while (newCapacity < alignedSize + size)
             newCapacity *= 2;
 
-        uint8_t* newBuffer = static_cast<uint8_t*>(mmap(0, newCapacity, PROT_READ | PROT_WRITE, MAP_ANON | MAP_PRIVATE, -1, 0));
+        uint8_t* newBuffer = static_cast<uint8_t*>(allocBuffer(newCapacity));
         if (!newBuffer)
             CRASH();
 
         memcpy(newBuffer, m_buffer, m_bufferSize);
 
         if (m_buffer != m_inlineBuffer)
-            munmap(m_buffer, m_bufferCapacity);
+            freeBuffer(m_buffer, m_bufferCapacity);
 
         m_buffer = newBuffer;
         m_bufferCapacity = newCapacity;
